hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__non_copy_but_clone@datalog_program.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: "prettyplease::unparse(&wrapped)"
---
fn main() {
    {
        use hydroflow::{var_expr, var_args};
        let mut df = hydroflow::scheduled::graph::Hydroflow::new();
        df.__assign_meta_graph(
            "{\"nodes\":[{\"value\":null,\"version\":0},{\"value\":null,\"version\":2},{\"value\":{\"Operator\":\"unique :: < 'tick > ()\"},\"version\":1},{\"value\":null,\"version\":2},{\"value\":null,\"version\":2},{\"value\":{\"Operator\":\"unique :: < 'tick > ()\"},\"version\":1},{\"value\":null,\"version\":2},{\"value\":{\"Operator\":\"source_stream (strings)\"},\"version\":1},{\"value\":{\"Operator\":\"for_each (| v | result . send (v) . unwrap ())\"},\"version\":1},{\"value\":{\"Operator\":\"map (| row : (_ ,) | (row . 0 . clone () , row . 0 ,))\"},\"version\":1}],\"graph\":[{\"value\":null,\"version\":0},{\"value\":null,\"version\":2},{\"value\":[{\"idx\":7,\"version\":1},{\"idx\":2,\"version\":1}],\"version\":3},{\"value\":null,\"version\":2},{\"value\":[{\"idx\":9,\"version\":1},{\"idx\":5,\"version\":1}],\"version\":3},{\"value\":null,\"version\":2},{\"value\":[{\"idx\":5,\"version\":1},{\"idx\":8,\"version\":1}],\"version\":3},{\"value\":null,\"version\":2},{\"value\":[{\"idx\":2,\"version\":1},{\"idx\":9,\"version\":1}],\"version\":3}],\"ports\":[{\"value\":null,\"version\":0},{\"value\":null,\"version\":0},{\"value\":[\"Elided\",\"Elided\"],\"version\":3},{\"value\":null,\"version\":0},{\"value\":[\"Elided\",\"Elided\"],\"version\":3},{\"value\":null,\"version\":0},{\"value\":[\"Elided\",\"Elided\"],\"version\":3},{\"value\":null,\"version\":0},{\"value\":[\"Elided\",\"Elided\"],\"version\":3}],\"node_subgraph\":[{\"value\":null,\"version\":0},{\"value\":null,\"version\":0},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":null,\"version\":0},{\"value\":null,\"version\":0},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":null,\"version\":0},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":1,\"version\":1},\"version\":1}],\"subgraph_nodes\":[{\"value\":null,\"version\":0},{\"value\":[{\"idx\":7,\"version\":1},{\"idx\":2,\"version\":1},{\"idx\":9,\"version\":1},{\"idx\":5,\"version\":1},{\"idx\":8,\"version\":1}],\"version\":1}],\"subgraph_stratum\":[{\"value\":null,\"version\":0},{\"value\":0,\"version\":1}],\"node_varnames\":[{\"value\":null,\"version\":0},{\"value\":null,\"version\":0},{\"value\":\"strings\",\"version\":1},{\"value\":null,\"version\":0},{\"value\":null,\"version\":0},{\"value\":\"result\",\"version\":1}]}",
        );
        df.__assign_diagnostics("[]");
        let mut sg_1v1_node_7v1_stream = {
            #[inline(always)]
            fn check_stream<
                Stream: hydroflow::futures::stream::Stream<Item = Item>,
                Item,
            >(
                stream: Stream,
            ) -> ::std::pin::Pin<
                ::std::boxed::Box<impl hydroflow::futures::stream::Stream<Item = Item>>,
            > {
                ::std::boxed::Box::pin(stream)
            }
            check_stream(strings)
        };
        let sg_1v1_node_2v1_uniquedata = df
            .add_state(
                ::std::cell::RefCell::new(
                    hydroflow::lang::monotonic_map::MonotonicMap::<
                        _,
                        hydroflow::rustc_hash::FxHashSet<_>,
                    >::default(),
                ),
            );
        let sg_1v1_node_5v1_uniquedata = df
            .add_state(
                ::std::cell::RefCell::new(
                    hydroflow::lang::monotonic_map::MonotonicMap::<
                        _,
                        hydroflow::rustc_hash::FxHashSet<_>,
                    >::default(),
                ),
            );
        df.add_subgraph_stratified(
            "Subgraph GraphSubgraphId(1v1)",
            0,
            var_expr!(),
            var_expr!(),
            move |context, var_args!(), var_args!()| {
                let op_7v1 = std::iter::from_fn(|| {
                    match hydroflow::futures::stream::Stream::poll_next(
                        sg_1v1_node_7v1_stream.as_mut(),
                        &mut std::task::Context::from_waker(&context.waker()),
                    ) {
                        std::task::Poll::Ready(maybe) => maybe,
                        std::task::Poll::Pending => None,
                    }
                });
                let op_7v1 = {
                    #[inline(always)]
                    pub fn check_op_7v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_7v1(op_7v1)
                };
                let op_2v1 = op_7v1
                    .filter(|item| {
                        let mut borrow = context
                            .state_ref(sg_1v1_node_2v1_uniquedata)
                            .borrow_mut();
                        let set = borrow
                            .try_insert_with(
                                (context.current_tick(), context.current_stratum()),
                                hydroflow::rustc_hash::FxHashSet::default,
                            );
                        if !set.contains(item) {
                            set.insert(::std::clone::Clone::clone(item));
                            true
                        } else {
                            false
                        }
                    });
                let op_2v1 = {
                    #[inline(always)]
                    pub fn check_op_2v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_2v1(op_2v1)
                };
                let op_9v1 = op_2v1.map(|row: (_,)| (row.0.clone(), row.0));
                let op_9v1 = {
                    #[inline(always)]
                    pub fn check_op_9v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_9v1(op_9v1)
                };
                let op_5v1 = op_9v1
                    .filter(|item| {
                        let mut borrow = context
                            .state_ref(sg_1v1_node_5v1_uniquedata)
                            .borrow_mut();
                        let set = borrow
                            .try_insert_with(
                                (context.current_tick(), context.current_stratum()),
                                hydroflow::rustc_hash::FxHashSet::default,
                            );
                        if !set.contains(item) {
                            set.insert(::std::clone::Clone::clone(item));
                            true
                        } else {
                            false
                        }
                    });
                let op_5v1 = {
                    #[inline(always)]
                    pub fn check_op_5v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_5v1(op_5v1)
                };
                let op_8v1 = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    result.send(v).unwrap()
                });
                let op_8v1 = {
                    #[inline(always)]
                    pub fn check_op_8v1<
                        Input: hydroflow::pusherator::Pusherator<Item = Item>,
                        Item,
                    >(
                        input: Input,
                    ) -> impl hydroflow::pusherator::Pusherator<Item = Item> {
                        input
                    }
                    check_op_8v1(op_8v1)
                };
                #[inline(always)]
                fn check_pivot_run<
                    Pull: ::std::iter::Iterator<Item = Item>,
                    Push: hydroflow::pusherator::Pusherator<Item = Item>,
                    Item,
                >(pull: Pull, push: Push) {
                    hydroflow::pusherator::pivot::Pivot::new(pull, push).run();
                }
                check_pivot_run(op_5v1, op_8v1);
            },
        );
        df
    }
}

