hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__persist@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
3v1 = difference :: < 'tick , 'static > ();
4v1 = tee ();
5v1 = next_tick ();
7v1 = unique :: < 'tick > ();
8v1 = difference :: < 'tick , 'static > ();
9v1 = tee ();
10v1 = next_tick ();
12v1 = unique :: < 'tick > ();
15v1 = unique :: < 'tick > ();
18v1 = unique :: < 'tick > ();
20v1 = source_stream (ints1);
21v1 = source_stream (ints2);
22v1 = source_stream (ints3);
23v1 = for_each (| v | result . send (v) . unwrap ());
24v1 = for_each (| v | result2 . send (v) . unwrap ());
25v1 = join :: < 'static , 'static , hydroflow :: compiled :: pull :: HalfMultisetJoinState > ();
26v1 = map (| kv : (() , ((_ ,) , (_ ,))) | (kv . 1 . 0 . 0 , kv . 1 . 1 . 0 ,));
27v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
28v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
29v1 = join :: < 'static , 'tick , hydroflow :: compiled :: pull :: HalfMultisetJoinState > ();
30v1 = map (| kv : (() , ((_ , _ ,) , (_ ,))) | (kv . 1 . 0 . 0 , kv . 1 . 0 . 1 , kv . 1 . 1 . 0 ,));
31v1 = map (| _v : (_ , _ ,) | (() , (_v . 0 , _v . 1 ,)));
32v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
33v1 = map (| row : (_ , _ , _ ,) | (row . 0 , row . 1 , row . 2 ,));
34v1 = anti_join ();
35v1 = map (| kv : ((_ ,) , ()) | (kv . 0 . 0 ,));
36v1 = persist ();
37v1 = map (| _v : (_ ,) | ((_v . 0 ,) , ()));
38v1 = persist ();
39v1 = map (| _v : (_ ,) | (_v . 0 ,));
40v1 = map (| row : (_ ,) | (row . 0 ,));

20v1 -> 2v1;
3v1 -> 4v1;
2v1 -> 3v1;
5v1 -> 3v1;
4v1 -> 5v1;
21v1 -> 7v1;
8v1 -> 9v1;
7v1 -> 8v1;
10v1 -> 8v1;
9v1 -> 10v1;
22v1 -> 12v1;
33v1 -> 15v1;
40v1 -> 18v1;
15v1 -> 23v1;
18v1 -> 24v1;
25v1 -> 26v1;
27v1 -> 25v1;
4v1 -> 27v1;
28v1 -> 25v1;
9v1 -> 28v1;
29v1 -> 30v1;
31v1 -> 29v1;
26v1 -> 31v1;
32v1 -> 29v1;
12v1 -> 32v1;
30v1 -> 33v1;
34v1 -> 35v1;
37v1 -> 34v1;
36v1 -> 37v1;
4v1 -> 36v1;
39v1 -> 34v1;
38v1 -> 39v1;
9v1 -> 38v1;
35v1 -> 40v1;

